@@ -1,0 +1,27 @@
+title: Checks locks per second in MSSQL tablespaces
+agents: windows
+author: Lars Michelsen <lm@mathias-kettner.de>
+license: GPL
+distribution: check_mk
+description:
+ This check monitors locking related information of MSSQL tablespaces
+ like for example the number of deadlocks per second or lock requests.
+
+ The check has been developed with MSSQL Server 2008 R2 but should
+ work with other versions too.
+
+ This check needs the Check_MK mssql.vbs plugin installed in
+ the agent. Please refer to the online documentation
+ for how to install that plugin.
+
+item:
+ The MSSQL instance name and the tablespace name separated by a space.
+
+perfdata:
+ lock_requests/sec(int): Number of requested locks per second.
+ lock_timeouts/sec(int): Number of lock timeouts per second.
+ number_of_deadlocks/sec(int): Number of deadlocks per second.
+ lock_waits/sec(int): Number of lock waits per second.
+
+inventory:
+ One separate check for each tablespace will be created.
